# ishmael

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml  render.yaml
design-docs/: initial-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/: sprites.ts
frontend/src/components/: AlertFeed.tsx  Compass.tsx  CrowsNest.tsx  DetailPanel.tsx  ExchangeFlow.tsx  IslandMarker.tsx  Leaderboard.tsx  MobyDick.tsx  OceanMap.tsx  PriceChart.tsx  ShipCursor.tsx  ShipsClock.tsx  Spyglass.tsx  TransferLine.tsx  WalletInspector.tsx  WhitenessModal.tsx
frontend/src/data/: jokes.txt  quotes.txt
frontend/src/hooks/: useIsMobile.ts  useMapState.ts  useWhaleUpdates.ts
frontend/src/lib/: api.ts  explorer.ts  geo.ts  quotes.ts
frontend/src/types/: whale.ts
pequod/: __init__.py  __main__.py  api_routes.py  broadcaster.py  client.py  dedup.py  enricher.py  formatter.py  geo.py  identity.py  label_registry.py  models.py  pipeline.py  poller.py  server.py  settings.py  watchlist.py
pequod/data/: country_centroids.json  country_names.json  known_locations.json
pequod/data/watchlist/: arbitrum.json  avalanche.json  base.json  bitcoin.json  bsc.json  ethereum.json  optimism.json  polygon.json  solana.json
tests/: e2e_mobile.mjs  e2e_screenshots.mjs  test_history.py
