[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pequod"
version = "0.1.0"
description = "Whale transaction alerts for crypto"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiogram>=3.20",
    "redis>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
pequod = "pequod.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
